<resources>
    <string name="app_name">MyNote</string>
    <string name="add_note">add note</string>
    <string name="notes_don_not_exist_add_note">У вас нет заметок.\nНажмите + чтобы добавить</string>
    <string name="for_search_enter_text">Для поиска введите запрос</string>
    <string name="found_nothing">Ничего не найдено</string>
    <string name="add_new_note">add new note</string>
    <string name="search_note">search note</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="write_text">Введите текст</string>
    <string name="write_header">Введите заголовок</string>
    <string name="dialog_title">Удаление заметки</string>
    <string name="dialog_message">Вы действительно хотите удалить заметку?</string>
    <string name="button_cancel">ОТМЕНА</string>
    <string name="button_delete">УДАЛИТЬ</string>
    <string name="search">Search</string>
    <string name="search_title">заголовок поиска</string>
    <string name="search_button">search_button</string>
    <string name="search_activity">searchActivity</string>
    <string name="content_description_delete">content description delete</string>
    <string name="content_description_share">content description share</string>
    <string name="content_description_add">content description add</string>
    <string name="save_new_note">save new note</string>
    <string name="search_picture">Search picture</string>
    <string name="note_picture">Note picture</string>
    <string name="changed">Изменено</string>
    <string name="db_name">notesDataBase</string>
    <string name="add_photo">Добавить фото</string>
    <string name="iv_take_photo">Сделать фото</string>
    <string name="iv_choose_from_gallery">Выбрать из галереи</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="download_picture">Загруженная картинка</string>

</resources>