<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modalBottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.editNote.EditNoteActivity">

    <TextView
        android:id="@+id/tv_article_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/source_sans_pro_regular400"
        android:text="@string/add_photo"
        android:textColor="#99000000"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:drawableStart="@drawable/ic_baseline_camera_alt_black_24"
        android:drawablePadding="34dp"
        android:fontFamily="@font/source_sans_pro_semi_bold600"
        android:text="@string/camera"
        android:contentDescription="@string/gallery"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:drawableStart="@drawable/ic_baseline_collections_black_24"
        android:drawablePadding="34dp"
        android:fontFamily="@font/source_sans_pro_semi_bold600"
        android:text="@string/gallery"
        android:contentDescription="@string/camera"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="UseCompatTextViewDrawableXml" />


</androidx.appcompat.widget.LinearLayoutCompat>



