<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddNote"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#0A55F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white"
        android:src="@drawable/ic_baseline_add_white_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/add_new_note" />

    <LinearLayout
        android:id="@+id/linearLayoutStartScreen"
        android:layout_width="283dp"
        android:layout_height="165dp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="142dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:backgroundTint="#00000000"
            app:srcCompat="@drawable/image_add_note"
            android:contentDescription="@string/add_note" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:fontFamily="@font/source_sans_pro_regular400"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/notes_don_not_exist_add_note"
            android:textColor="#222530"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        android:background="#222530"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>